--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -53,6 +53,36 @@ p{
     font-size: 24px;
     color: #272142;
 }
+
+.content-container{
+    padding: 160px 20px;
+}
+
+.content h1 {
+    font-size: 64px;
+    line-height: 80px;
+}
+
+.content h2{
+  font-size: 18px;
+    line-height: 27px;
+    font-family: var(--default-font-family);  
+}
+
+.content h3{
+    font-size: 24px;
+    font-family: var(--default-font-family);
+}
+
+.content p{
+    font-size: 14px;
+    font-family: var(--default-font-family);
+}
+
+.content{
+    margin: 47px;
+}
+
 .btn-branding{
     background: var(--branding-color);
     border-radius: 4px;
@@ -86,6 +116,12 @@ p{
 
     .hero{
         padding: 50px 20px;
+    }
+
+    .content-container {
+        text-align: center;
+        padding: 0;
+    
     }
 
     .project-description {
