--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,6 +26,11 @@ h2{
     font-size: 64px;
 }
 
+
+h4{
+    font-size: 48px;
+}
+
 p{
     font-family: var(--default-font-family);
     font-weight: normal;
@@ -136,6 +141,45 @@ nav li.active a {
     color: var(--branding-color);
 }
 
+footer{
+    margin: 60px 0;
+}
+
+footer .contact-box{
+    background: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+
+footer .contact-box p{
+    margin: 0;
+}
+
+footer .email-link{
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    text-align: center;
+}
+
+footer .email-link:hover{
+    color: var(--branding-color);
+}
+
+footer .social-links a{
+    margin: 0 20px;
+    color: var(--branding-color);
+    background-color: var(--secondary-color);
+    padding: 10px 14px;
+    font-size: 18px;
+    border-radius: 50%;
+}
+
+footer .social-links a:hover{
+    color: white;
+    background: var(--branding-color);
+}
+
 @media(max-width: 900px) {
     h1{
         font-size: 44px;
@@ -144,6 +188,10 @@ nav li.active a {
     h2{
         font-size: 44px;
         line-height: 1.5;
+    }
+
+    h4{
+        font-size: 26px;
     }
 
     .hero{
@@ -159,6 +207,11 @@ nav li.active a {
         padding: 0;
         text-align: center;
     }
+
+    footer .contact-box{
+    padding: 30px ;
+    
+}
 
     nav a{
         font-size: 12px;
